# ollama-claude-agent

./: .dockerignore  .env.example  Dockerfile  Dockerfile-dev  README.md  entrypoint-dev.sh  pyproject.toml
.github/workflows/: docker-publish.yml
docs/plans/: 2026-02-05-openai-api-compatibility-design.md  2026-02-05-openai-api-implementation-plan.md
src/ollama_claude/: __init__.py  auth.py  config.py  main.py  models.py
src/ollama_claude/routers/: __init__.py  chat.py  generate.py  models.py  openai_chat.py  openai_completions.py  openai_models.py
src/ollama_claude/services/: __init__.py  claude_service.py  stream_adapter.py
tests/: __init__.py  test_openai_chat.py  test_openai_completions.py  test_openai_models.py
